read me updated

--- a/JokesApp/JokesApp.csproj
+++ b/JokesApp/JokesApp.csproj
@@ -7,6 +7,8 @@
     <UserSecretsId>aspnet-JokesApp-9d827223-4422-4e9f-b849-092d692d8d76</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
